# flex-layout

./: .gitignore  BUILD.bazel  WORKSPACE  build-config.js  package-lock.json  package.json
.circleci/: config.yml
src/apps/demo-app/: package-lock.json  package.json
src/apps/hello-world/: package.json
src/apps/universal-app/: package-lock.json  package.json
src/lib/: BUILD.bazel  module.ts  tsconfig-build.json  tsconfig.json
src/lib/core/: BUILD.bazel  module.ts  package.json  public-api.ts  tsconfig-build.json
src/lib/core/base/: base-adapter.spec.ts  base.ts
src/lib/core/breakpoints/: break-points-provider.ts  break-points-token.ts  breakpoint-tools.ts
src/lib/core/match-media/: match-media.spec.ts  match-media.ts
src/lib/core/match-media/mock/: mock-match-media.spec.ts
src/lib/core/media-monitor/: media-monitor.ts
src/lib/core/observable-media/: observable-media.spec.ts  observable-media.ts
src/lib/core/responsive-activation/: responsive-activation.ts
src/lib/core/style-utils/: style-utils.spec.ts  style-utils.ts
src/lib/core/testing/: custom-matchers.ts  helpers.ts
src/lib/core/utils/: add-alias.ts
src/lib/extended/: BUILD.bazel  package.json  tsconfig-build.json
src/lib/extended/class/: class.spec.ts
src/lib/extended/img-src/: img-src.spec.ts
src/lib/extended/show-hide/: hide.spec.ts  show-hide.ts  show.spec.ts
src/lib/extended/style/: style-transforms.spec.ts  style.spec.ts
src/lib/flex/: BUILD.bazel  package.json  tsconfig-build.json
src/lib/flex/flex/: flex.spec.ts  flex.ts
src/lib/flex/flex-offset/: flex-offset.spec.ts  flex-offset.ts
src/lib/flex/layout/: layout.spec.ts  layout.ts
src/lib/flex/layout-align/: layout-align.spec.ts  layout-align.ts
src/lib/flex/layout-gap/: layout-gap.spec.ts  layout-gap.ts
src/lib/server/: BUILD.bazel  package.json  tsconfig-build.json
test/: BUILD.bazel  angular-test-init-node-spec.ts  karma-test-shim.js  karma.conf.js
tools/: defaults.bzl  globals.bzl
