package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")


# Common set-up for all Layout tests.
ts_library(
  name = "angular_test_init",
  testonly = 1,
  # This file *must* end with "spec" in order for ts_web_test to load it.
  srcs = ["angular-test-init-spec.ts"],
)

# Common set-up for all Layout SSR tests.
ts_library(
  name = "angular_test_init_node",
  testonly = 1,
  # This file *must* end with "spec" in order for ts_web_test to load it.
  srcs = ["angular-test-init-node-spec.ts"],
)
