package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module", "ng_package")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")
load("//tools:globals.bzl", "LAYOUT_ENTRY_POINTS", "ROLLUP_GLOBALS")

ng_module(
  name = "flex_layout",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout",
  deps = [
    "//src/lib/core",
    "//src/lib/extended",
    "//src/lib/flex",
  ],
  tsconfig = ":tsconfig-build.json",
)

ts_config(
  name ="tsconfig_tests",
  src = "tsconfig-tests.json",
  deps = ["tsconfig-build.json"],
)

ng_package(
    name = "npm_package",
    srcs = glob([
      "**/package.json",
    ]) + ["//src/lib/%s:npm_package_assets" % e for e in LAYOUT_ENTRY_POINTS],
    deps = [":flex_layout"] + ["//src/lib/%s" % e for e in LAYOUT_ENTRY_POINTS],
    entry_point = "src/lib/index.js",
    secondary_entry_points = LAYOUT_ENTRY_POINTS,
    globals = ROLLUP_GLOBALS,
)
