package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
  name = "core",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout/core",
  deps = [
    "@rxjs",
  ],
  tsconfig = ":tsconfig-build.json",
)

ts_library(
  name = "core_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    ":core",
    "@rxjs",
  ],
  tsconfig = ":tsconfig-build.json",
)

jasmine_node_test(
  name = "test",
  bootstrap = ["angular_flex_layout_srcs/test/angular-test-init-node-spec.js"],
  deps = [
    ":core_test_sources",
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
  ],
)

ts_web_test(
  name = "unit_tests",
  bootstrap = [
    "//:web_test_bootstrap_scripts",
  ],

  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":core_test_sources",
  ],
)

filegroup(
    name = "npm_package_assets",
    srcs = ["package.json"],
)
