package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

ng_module(
  name = "server",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout/server",
  deps = [
    "//src/lib/core",
    "@rxjs",
  ],
  tsconfig = ":tsconfig-build.json",
)

ts_library(
  name = "server_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    ":server",
    "@rxjs",
  ],
  tsconfig = ":tsconfig-build.json",
)

ts_web_test(
  name = "unit_tests",
  bootstrap = [
    "//:web_test_bootstrap_scripts",
  ],

  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":server_test_sources",
  ],
)

filegroup(
    name = "npm_package_assets",
    srcs = ["package.json"],
)
